logs/mobility/build.make.082.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/Coordinate.cpp:55:6: error: prototype for ‘void Coordinate::setTime(float)’ does not match any in class ‘Coordinate’
 void Coordinate::setTime(float t_c)
      ^
In file included from /nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/Coordinate.cpp:1:0:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/Coordinate.h:18:10: error: candidate is: void Coordinate::setTime(time_t)
     void setTime(time_t t);
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/Coordinate.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp: In constructor ‘TargetDetectionEvent::TargetDetectionEvent(time_t, float, float, int)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp:8:25: error: no match for call to ‘(Coordinate) (float&, float&, float, time_t&)’
   position(x, y, 0.0f, t);
                         ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In member function ‘float ALSAController::calcHopkinsIndex(std::vector<Coordinate*>, float, float, float, float, float, float)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:95:29: error: ‘std::vector<Coordinate*>::iterator’ has no member named ‘getDistance’
           double dist = Sit.getDistance(*Rit);
                             ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:104:29: error: ‘std::vector<Coordinate*>::iterator’ has no member named ‘getDistance’
           double dist = Sit.getDistance(*Sit2);
                             ^
make[2]: *** [CMakeFiles/mobility.dir/src/TargetDetectionEvent.cpp.o] Error 1
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
